<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".fragments.DigitFragment">

    <TextView
        android:id="@+id/digit7Button"
        style="@style/Button.Number"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/digit_7_button"
        app:layout_constraintBottom_toTopOf="@id/digit4Button"
        app:layout_constraintEnd_toStartOf="@id/digit8Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/digit8Button"
        style="@style/Button.Number"
        android:layout_marginTop="0dp"
        android:text="@string/digit_8_button"
        app:layout_constraintBottom_toTopOf="@id/digit5Button"
        app:layout_constraintEnd_toStartOf="@id/digit9Button"
        app:layout_constraintStart_toEndOf="@id/digit7Button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/digit9Button"
        style="@style/Button.Number"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/digit_9_button"
        app:layout_constraintBottom_toTopOf="@id/digit6Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/digit8Button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/digit4Button"
        style="@style/Button.Number"
        android:layout_marginStart="0dp"
        android:text="@string/digit_4_button"
        app:layout_constraintBottom_toTopOf="@id/digit1Button"
        app:layout_constraintEnd_toStartOf="@id/digit5Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/digit7Button" />

    <TextView
        android:id="@+id/digit5Button"
        style="@style/Button.Number"
        android:text="@string/digit_5_button"
        app:layout_constraintBottom_toTopOf="@id/digit2Button"
        app:layout_constraintEnd_toStartOf="@id/digit6Button"
        app:layout_constraintStart_toEndOf="@id/digit4Button"
        app:layout_constraintTop_toBottomOf="@id/digit8Button" />

    <TextView
        android:id="@+id/digit6Button"
        style="@style/Button.Number"
        android:layout_marginEnd="0dp"
        android:text="@string/digit_6_button"
        app:layout_constraintBottom_toTopOf="@id/digit3Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/digit5Button"
        app:layout_constraintTop_toBottomOf="@id/digit9Button" />

    <TextView
        android:id="@+id/digit1Button"
        style="@style/Button.Number"
        android:layout_marginStart="0dp"
        android:text="@string/digit_1_button"
        app:layout_constraintBottom_toTopOf="@id/digit0Button"
        app:layout_constraintEnd_toStartOf="@id/digit2Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/digit4Button" />

    <TextView
        android:id="@+id/digit2Button"
        style="@style/Button.Number"
        android:text="@string/digit_2_button"
        app:layout_constraintBottom_toTopOf="@id/dotButton"
        app:layout_constraintEnd_toStartOf="@id/digit3Button"
        app:layout_constraintStart_toEndOf="@id/digit1Button"
        app:layout_constraintTop_toBottomOf="@id/digit5Button" />

    <TextView
        android:id="@+id/digit3Button"
        style="@style/Button.Number"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/digit_3_button"
        app:layout_constraintBottom_toBottomOf="@id/digit2Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/digit2Button"
        app:layout_constraintTop_toBottomOf="@id/digit6Button" />

    <TextView
        android:id="@+id/digit0Button"
        style="@style/Button.Number"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:text="@string/digit_0_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dotButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/digit1Button" />

    <TextView
        android:id="@+id/dotButton"
        style="@style/Button.Number"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/dot_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/digit2Button"
        app:layout_constraintStart_toEndOf="@id/digit0Button"
        app:layout_constraintTop_toBottomOf="@id/digit2Button" />

</androidx.constraintlayout.widget.ConstraintLayout>